<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="0dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/mireaLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/rtslogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cwLogin"
        app:layout_constraintWidth_max="10dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:alpha="1"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authText"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_person"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_baseline_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errorText"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="0dp">
                <Switch
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:theme="@style/Theme.MyTheme"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saveLoginData"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/purple"
                android:text="@string/loginbtn"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:padding="8dp"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="14sp" />


</LinearLayout>