<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/custom_edittext"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">
        <TextView
            android:id="@+id/confirmText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmText"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/cancelButton"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:text="@string/cancel"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:text="@string/confirm"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
