<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/custom_edittext"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <androidx.cardview.widget.CardView
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="35dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_empty_ava"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_empty_ava"
            android:drawablePadding="8dp"
            android:hint="@string/urlAvatar"
            android:imeOptions="actionNext"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_person"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_phone"
            android:drawablePadding="8dp"
            android:hint="@string/number"
            android:inputType="phone"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />
        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="0sp"
            android:textColor="@color/red"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/cancelButton"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:text="@string/cnclbtn"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:text="@string/savebtn"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
